--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
     "@next/env": "^15.2.1",
+    "@octokit/plugin-paginate-rest": "^11.6.0",
+    "@octokit/request": "^9.2.2",
+    "@octokit/request-error": "^6.1.7",
+    "@octokit/rest": "^21.1.1",
     "@paypal/react-paypal-js": "^8.8.2",
     "@prisma/adapter-neon": "^6.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -28,7 +32,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
-    "@react-email/components": "^0.0.33",
+    "@react-email/components": "^0.0.34",
     "@stripe/react-stripe-js": "^3.4.0",
     "@stripe/stripe-js": "^6.0.0",
     "@uploadthing/react": "^7.3.0",
@@ -40,14 +44,14 @@
     "embla-carousel-react": "^8.5.2",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.474.0",
-    "next": "15.1",
+    "next": "15.2.3",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "postcss": "^8.5.3",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-email": "^3.0.7",
+    "react-email": "^1.2.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "resend": "^4.1.2",
@@ -81,5 +85,10 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@react-email/components": {
+      "react": "$react"
+    }
   }
 }
