--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
     "@next/env": "^15.2.1",
-    "@octokit/plugin-paginate-rest": "^11.6.0",
-    "@octokit/request": "^9.2.2",
-    "@octokit/request-error": "^6.1.7",
+    "@octokit/plugin-paginate-rest": "^13.1.1",
+    "@octokit/request": "^10.0.3",
+    "@octokit/request-error": "^7.0.0",
     "@octokit/rest": "^21.1.1",
     "@paypal/react-paypal-js": "^8.8.2",
     "@prisma/adapter-neon": "^6.2.1",
@@ -32,7 +32,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
-    "@react-email/components": "^0.0.34",
+    "@react-email/components": "^0.0.36",
     "@stripe/react-stripe-js": "^3.4.0",
     "@stripe/stripe-js": "^6.0.0",
     "@uploadthing/react": "^7.3.0",
@@ -44,14 +44,14 @@
     "embla-carousel-react": "^8.5.2",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.474.0",
-    "next": "15.2.3",
+    "next": "^15.3.3",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "postcss": "^8.5.3",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-email": "^1.2.0",
+    "react-email": "^4.2.3",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "resend": "^4.1.2",
@@ -67,7 +67,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/eslintrc": "^3.3.1",
     "@prisma/client": "^6.4.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.18",
@@ -76,8 +76,8 @@
     "@types/ws": "^8.5.14",
     "bufferutil": "^4.0.9",
     "dotenv": "^16.4.7",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint": "^9.31.0",
+    "eslint-config-next": "15.4.2",
     "jest": "^29.7.0",
     "prisma": "^6.4.1",
     "ts-jest": "^29.2.5",
